# local-spark-cluster

./: .gitignore  .pre-commit-config.yaml  README.md  checks.sh  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  spark_cluster.bat  spark_cluster.sh  tox.ini
.github/workflows/: ci.yml  ruff.yml
src/: spark_session.py  utils.py
src/api/: _compute.py  _dataset.py  decorators.py
src/compute/: __init__.py  _compute.py  _dataset.py  _logger.py  _utils.py  data_compute.py  datastorage.py  decorators.py  input.py  output.py  session.py  toolbox.py
src/config/: logger.json  mylogger.py
src/jobs/: general.py  pyspark_window.py  script_api.py  script_classic.py  script_compute.py  script_template.py
src/scripts/: script_api.py  script_template.py
src/validator/: validator.py
tests/: conftest.py  test_compute.py  test_output.py  test_toolbox.py
tests/api/: test_utils.py
tests/compute/: import pytest.py  test__compute.py  test__dataset.py  test__utils.py  test_compute.py  test_dataset.py  test_input.py  test_output.py  test_toolbox.py  test_utils.py
vscode extension/: spark-job-submit-0.0.1-1.vsix  spark-job-submit-0.0.1.vsix
vscode extension/source/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode extension/source/src/: extension.ts
