[metadata]
name = compute
description = A compute wrapper for spark
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    compute
install_requires =
    mypy
    ruff
    pyspark>=3.2
    pytest
    pytest-cov
    tomli
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    tox

[options.package_data]
slapping = py.typed
